finish docker compose

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,4 +10,19 @@ ktor {
     application {
         modules = [ com.fadinglight.ApplicationKt.module ]
     }
+
+    mongo {
+        server = localhost
+        server = ${?MONGO_SERVER}
+
+        port = 27017
+        port = ${?MONGO_PORT}
+
+        database = bill
+        database = ${?MONGO_DATABASE}
+
+        username = ${?MONGO_USERNAME}
+        password = ${?MONGO_PASSWORD}
+    }
 }
+
